app/styles.css
@font-face {
  font-family: RethinkSans;
  src: url(Fonts/RethinkSans-Regular.ttf);
}

@font-face {
  font-family: RethinkSans;
  src: url(Fonts/RethinkSans-Bold.ttf);
  font-weight: 600;
}

body {
  font-family: RethinkSans;
  background-color: #191919;
  margin-left: 0;
  margin-right: 0;
}

h1 {
  text-align: center;
  font-size: 3vh;
  font-weight: 600;
  color: #d6d6d6;
  margin: 20px auto;
}

a:link {
  text-decoration: none;
  color: #ffc870;
}

a:link svg path {
  fill: #ffc870;
}

a:visited {
  color: rgb(125, 91, 156);
}

a:visited svg path {
  color: rgb(125, 91, 156);
}

a:hover {
  color: hotpink;
}

a:hover svg path{
  fill: hotpink;
}

button:active {
  background-color: #c72a12;
}

button {
  font-family: RethinkSans;
  text-align: center;
  color: #2f2f2f;
  background-color: #fac637;
  border: 0.1vh solid grey;
}

#switchButton {
  position: relative;
  top: 48px;
  left: 4%;
  width: 60px;
  height: 24px;
  font-size: 13px;
  max-width: 100%;
  line-height: 1em;
  text-align: center;
  margin-right: 4%;
  pointer-events: visible;
}

.header {
  display: flex;
  margin: 0 13%;
  justify-content: center;
}

#github {
  margin: 0;
}

#github svg {
  fill: rgb(125, 91, 156);
  max-height: 1.7vh;
  max-width: 1.7vh;
  margin: 0;
}

.footer {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin: 10px 13%;
  padding: 2px 1vh;
  /* justify-content: flex-start; */
  font-size: 1.7vh;
  color: #d6d6d6;
}

#sources {
  display: flex;
  grid-row: span 2;
  margin-left: auto;
}

.tooltip {
  position: absolute;
  text-align: left;
  padding: 1vh;
  font-size: 1.6vh;
  background: lightsteelblue;
  border-radius: 0.1vh;
  pointer-events: none;
}

#info {
  display: inline;
  margin-right: auto;
}

#links {
  margin-left: 1vh;
}

#container {
  position: relative;
  margin: auto;
  width: 74%;
  height: 80vh;
}

#map-elements {
  z-index: 1;
  position: absolute;
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

#map {
  width: 100%;
  height: 100%;
  background-color: white;
}

.legend {
  fill: #2f2f2f;
}

#em-legend {
  position: relative;
  margin-right: auto;
  top: 30px;
  left: 1%;
  height: 100px;
  width: 250px;
}

#em-legend rect {
  transform: translate(0px, 18px);
}

#em-legend-title {
  transform: translate(4px, 12px);
  opacity: 1;
}

.em-legend-text {
  transform: translate(4px, 60px);
}

#type-legend {
  position: relative;
  top: 46px;
  width: 180px;
  margin-left: auto;
  margin-right: 2px;
}

.type-legend-circle {
  pointer-events: all;
}

@media only screen and (max-width: 1024px) {
  #container {
    width: 100vw;
    height: 75vh;
  }

  .header {
    margin: 0;
  }

  #github {
    text-align: center;
    margin-top: 10px;
    order: 2;
    grid-row: 3;
  }

  #github a{
    margin: 0 auto ;
    position: relative;
    bottom: 130%;
  }

  .footer {
    margin: 15px auto 10px auto;
    grid-template-columns: 1fr;
    grid-auto-flow: row;
    font-size: 1.4vh;
    align-items: center;
  }

  #github svg {
    fill: rgb(125, 91, 156);
    max-height: 1.4vh;
    max-width: 1.4vh;
  }

  #sources {
    align-content: center;
    margin: auto;
    order: 1;
    grid-row: 2;
  }

  #info {
    margin: auto auto 10px auto;
  }

  h1 {
    font-size: 2vh;
  }

}

@media only screen and (max-width: 750px) {
  #type-legend {
    display: none;
  }
}

@media only screen and (max-width: 500px) {
  #container {
    height: 70vh;
  }
}

@media (hover: hover) {
  button:hover {
    background-color: #eb7530;
  }

  button:hover:active {
    background-color: #c72a12;
  }
}

@media not all and (min-resolution:.001dpcm)
{ @supports (-webkit-appearance:none) {

    #em-legend { 

        position: absolute;

    }

    #github {

      transform: translate(0, -50px);

    }
}}

